src/objects/Campaign.object
<CustomObject>
</CustomObject>