src/objects/Campaign/fields/BK_Value_Won_Opportunities_in_Campaign__c.field-meta.xml
<CustomField>
    <fullName>BK_Value_Won_Opportunities_in_Campaign__c</fullName>
    <label>BK_Value_Won Opportunities_in_Campaign</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>