src/objects/Campaign/fields/Campaign_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Manager_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Campaign Manager Email</label>
    <type>Email</type>
</CustomField>