src/objects/Campaign/fields/Campaign_Number__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Number__c</fullName>
    <displayFormat>CA-{0}</displayFormat>
    <label>Campaign Number</label>
    <type>AutoNumber</type>
</CustomField>