src/objects/Campaign/fields/CampaignPrimarySBU__c.field-meta.xml
<CustomField>
    <fullName>CampaignPrimarySBU__c</fullName>
    <inlineHelpText>Campaign primary SBU. The SBU that has primary business responsibility for this campaign.</inlineHelpText>
    <label>Primary SBU</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACS Labs</fullName>
            </value>
            <value>
                <fullName>Aero Level</fullName>
            </value>
            <value>
                <fullName>ATR</fullName>
            </value>
            <value>
                <fullName>BGA</fullName>
            </value>
            <value>
                <fullName>D&amp;S</fullName>
            </value>
            <value>
                <fullName>Intercompany</fullName>
            </value>
            <value>
                <fullName>Intracompany</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>