src/objects/Campaign/fields/Event_Website__c.field-meta.xml
<CustomField>
    <fullName>Event_Website__c</fullName>
    <inlineHelpText>The website for the event.</inlineHelpText>
    <label>Event Website</label>
    <type>Url</type>
</CustomField>