src/objects/Campaign/fields/Lead_Business_Line__c.field-meta.xml
<CustomField>
    <fullName>Lead_Business_Line__c</fullName>
    <label>Lead Business Line</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FN - 7360 Cable (BL)</fullName>
            </value>
            <value>
                <fullName>FN - AMS (BL)</fullName>
            </value>
            <value>
                <fullName>FN - Care (BL)</fullName>
            </value>
            <value>
                <fullName>FN - Copper (BL)</fullName>
            </value>
            <value>
                <fullName>FN - DH - ONT (BL)</fullName>
            </value>
            <value>
                <fullName>FN - FIBER (BL)</fullName>
            </value>
            <value>
                <fullName>FN - FastMile (incl. LTE &amp; 5G) (BL)</fullName>
            </value>
            <value>
                <fullName>FN - Gainspeed (incl SF-4X) (BL)</fullName>
            </value>
            <value>
                <fullName>FN - Nokia Corp FN (BL)</fullName>
            </value>
            <value>
                <fullName>FN - Professional Services (BL)</fullName>
            </value>
            <value>
                <fullName>FN - Wireless PON (BL)</fullName>
            </value>
            <value>
                <fullName>GS - Connectivity Platform as a Serv (BL)</fullName>
            </value>
            <value>
                <fullName>GS - Deploy Build, Turnkey &amp; Modern (BL)</fullName>
            </value>
            <value>
                <fullName>GS - NCS Cognitive Services (BL)</fullName>
            </value>
            <value>
                <fullName>GS - NCS Network Performance Svcs (BL)</fullName>
            </value>
            <value>
                <fullName>GS - Nokia Corp GS (BL)</fullName>
            </value>
            <value>
                <fullName>GS - Operate &amp; Manage - Innovation (BL)</fullName>
            </value>
            <value>
                <fullName>GS - Operate &amp; Manage - Traditional (BL)</fullName>
            </value>
            <value>
                <fullName>GS - Services Integration and Testing (BL)</fullName>
            </value>
            <value>
                <fullName>GS - TSS Hardware Services (BL)</fullName>
            </value>
            <value>
                <fullName>ION - IP Rtg - IP (BL)</fullName>
            </value>
            <value>
                <fullName>ION - IP Rtg - Nuage (BL)</fullName>
            </value>
            <value>
                <fullName>ION - IP Rtg Care Services (BL)</fullName>
            </value>
            <value>
                <fullName>ION - IP Rtg Deepfield Ntwk Intlg (BL)</fullName>
            </value>
            <value>
                <fullName>ION - IP Rtg Mobile Packet Core (BL)</fullName>
            </value>
            <value>
                <fullName>ION - IP Rtg NSM (BL)</fullName>
            </value>
            <value>
                <fullName>ION - IP Video (BL)</fullName>
            </value>
            <value>
                <fullName>ION - Nokia Corp ION (BL)</fullName>
            </value>
            <value>
                <fullName>ION - Optics Network Management (BL)</fullName>
            </value>
            <value>
                <fullName>ION - Optics Optical M.S. Networks (BL)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>