src/objects/Campaign/fields/MCASegment__c.field-meta.xml
<CustomField>
    <fullName>MCASegment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MCA Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>