src/objects/Campaign/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Platform</label>
    <referenceTo>Platform__c</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>