src/objects/Campaign/fields/Record_Class__c.field-meta.xml
<CustomField>
    <fullName>Record_Class__c</fullName>
    <description>Record Class is Record Retention categorized classification name of corresponding &quot;Record Code&quot;.</description>
    <inlineHelpText>Record Class is Record Retention categorized classification name of corresponding &quot;Record Code&quot;.</inlineHelpText>
    <label>Record Class</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Record_Code__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>