src/objects/Campaign/fields/RMU__c.field-meta.xml
<CustomField>
    <fullName>RMU__c</fullName>
    <label>Offering</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>