src/objects/Campaign/fields/SC2__c.field-meta.xml
<CustomField>
    <fullName>SC2__c</fullName>
    <label>Primary Sub-Channel2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SC1__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>