src/objects/Campaign/fields/Tech_Sales__c.field-meta.xml
<CustomField>
    <fullName>Tech_Sales__c</fullName>
    <label>Tech Sales</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AT</fullName>
            </value>
            <value>
                <fullName>Avionics</fullName>
            </value>
            <value>
                <fullName>FM&amp;T</fullName>
            </value>
            <value>
                <fullName>HTSI</fullName>
            </value>
            <value>
                <fullName>Integrated Systems</fullName>
            </value>
            <value>
                <fullName>LHTEC / ITEC</fullName>
            </value>
            <value>
                <fullName>Mechanical Systems</fullName>
            </value>
            <value>
                <fullName>Space</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>