src/objects/Campaign/fields/Tech_Sales_Product_Area__c.field-meta.xml
<CustomField>
    <fullName>Tech_Sales_Product_Area__c</fullName>
    <label>Tech Sales Product Area</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tech_Sales__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Air Management Systems (CATOX, ECS)</fullName>
            </value>
            <value>
                <fullName>APU</fullName>
            </value>
            <value>
                <fullName>AT</fullName>
            </value>
            <value>
                <fullName>Automatic Test Equipment</fullName>
            </value>
            <value>
                <fullName>CBM</fullName>
            </value>
            <value>
                <fullName>Comm/Nav &amp; ELT</fullName>
            </value>
            <value>
                <fullName>Displays</fullName>
            </value>
            <value>
                <fullName>EGPWS</fullName>
            </value>
            <value>
                <fullName>Electrical Power</fullName>
            </value>
            <value>
                <fullName>Electronic Warfare</fullName>
            </value>
            <value>
                <fullName>EMS COTS</fullName>
            </value>
            <value>
                <fullName>EMS Custom Solutions</fullName>
            </value>
            <value>
                <fullName>EMS Sky Connect</fullName>
            </value>
            <value>
                <fullName>Flight Controls</fullName>
            </value>
            <value>
                <fullName>FM&amp;T</fullName>
            </value>
            <value>
                <fullName>HTSI</fullName>
            </value>
            <value>
                <fullName>Integrated Avionics</fullName>
            </value>
            <value>
                <fullName>ITEC</fullName>
            </value>
            <value>
                <fullName>LHTEC</fullName>
            </value>
            <value>
                <fullName>Lighting</fullName>
            </value>
            <value>
                <fullName>Mechanical Components</fullName>
            </value>
            <value>
                <fullName>Microelectronics</fullName>
            </value>
            <value>
                <fullName>Micro Grid</fullName>
            </value>
            <value>
                <fullName>Missiles &amp; Munitions - US Primes</fullName>
            </value>
            <value>
                <fullName>Missiles &amp; Munitions - Worldwide</fullName>
            </value>
            <value>
                <fullName>Navigation, Sensors &amp; Air Data</fullName>
            </value>
            <value>
                <fullName>PBL Services</fullName>
            </value>
            <value>
                <fullName>Propulsion</fullName>
            </value>
            <value>
                <fullName>Radar</fullName>
            </value>
            <value>
                <fullName>Radar Altimeter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>