src/objects/Campaign/recordTypes/ATR.recordType-meta.xml
<RecordType>
    <fullName>ATR</fullName>
    <active>true</active>
    <label>ATR</label>
</RecordType>