src/objects/Campaign/recordTypes/BGACampaignRecordTypeNew.recordType-meta.xml
<RecordType>
    <fullName>BGACampaignRecordTypeNew</fullName>
    <active>true</active>
    <description>BGA Campaign Record Type</description>
    <label>BGA Campaign Record Type - New</label>
</RecordType>