src/objects/Campaign/recordTypes/D_S.recordType-meta.xml
<RecordType>
    <fullName>D_S</fullName>
    <active>true</active>
    <label>D&amp;S</label>
</RecordType>