src/objects/Campaign/recordTypes/HCE.recordType-meta.xml
<RecordType>
    <fullName>HCE</fullName>
    <active>true</active>
    <label>HCE</label>
</RecordType>