src/objects/Campaign/recordTypes/Program_Flags.recordType-meta.xml
<RecordType>
    <fullName>Program_Flags</fullName>
    <active>true</active>
    <description>This record type is created for Program Flags tracking on Opportunity</description>
    <label>Program Flags</label>
</RecordType>