src/objects/Campaign/validationRules/CampaignType_EditPrevention.validationRule-meta.xml
<ValidationRule>
    <fullName>CampaignType_EditPrevention</fullName>
    <active>false</active>
    <description>This validation rule is to prevent users from editing the Campaign Type .</description>
    <errorConditionFormula>AND(ISCHANGED(Type),PRIORVALUE(Type)!=&apos;&apos;)</errorConditionFormula>
    <errorDisplayField>Type</errorDisplayField>
    <errorMessage>User is not allowed to change the Campaign Type once entered</errorMessage>
</ValidationRule>