src/objects/Campaign/listViews/Airlines_Campaigns.listView-meta.xml
<ListView>
    <fullName>Airlines_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CampaignPrimarySBU__c</columns>
    <filterScope>Everything</filterScope>
    <label>Airlines Campaigns</label>
</ListView>