src/objects/Campaign/listViews/All_Active_Campaigns.listView-meta.xml
<ListView>
    <fullName>All_Active_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CampaignPrimarySBU__c</columns>
    <columns>CAMPAIGN.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
    <columns>CAMPAIGN.TOT_OPPORTUNITIES</columns>
    <columns>CAMPAIGN.NUM_WON_OPPORTUNITIES</columns>
    <columns>CAMPAIGN.NUM_LEADS</columns>
    <columns>CAMPAIGN.NUM_CONVERTED_LEADS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>PARENT_NAME</field>
        <operation>equals</operation>
        <value>Connected Aircraft</value>
    </filters>
    <filters>
        <field>CAMPAIGN.NAME</field>
        <operation>equals</operation>
        <value>RMU/HUMS</value>
    </filters>
    <label>All Active Campaigns</label>
</ListView>