src/objects/Campaign/listViews/All_Campaign.listView-meta.xml
<ListView>
    <fullName>All_Campaign</fullName>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.RECORDTYPE</columns>
    <columns>CAMPAIGN.ID</columns>
    <columns>Campaign_Number__c</columns>
    <columns>PARENT_NAME</columns>
    <columns>CampaignPrimarySBU__c</columns>
    <columns>CAMPAIGN.ACTIVE</columns>
    <columns>CampaignPrimaryCBTTier2__c</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
    <columns>CAMPAIGN.NUM_WON_OPPORTUNITIES</columns>
    <columns>CAMPAIGN.NUM_LEADS</columns>
    <filterScope>Mine</filterScope>
    <label>All Campaigns</label>
</ListView>