src/objects/Campaign/listViews/All_D_S_RMU.listView-meta.xml
<ListView>
    <fullName>All_D_S_RMU</fullName>
    <columns>CAMPAIGN.ACTIVE</columns>
    <columns>CAMPAIGN.NAME</columns>
    <columns>Campaign_Number__c</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Next_Phase__c</columns>
    <columns>Next_Phase_Date__c</columns>
    <columns>CampaignPrimarySBU__c</columns>
    <columns>CampaignPrimaryCBTTier2__c</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CampaignPrimarySBU__c</field>
        <operation>equals</operation>
        <value>D&amp;S</value>
    </filters>
    <filters>
        <field>CAMPAIGN.NAME</field>
        <operation>contains</operation>
        <value>RMU</value>
    </filters>
    <label>All D&amp;S RMU</label>
    <language>en_US</language>
</ListView>