src/objects/Campaign/listViews/All_D_S_Strategic.listView-meta.xml
<ListView>
    <fullName>All_D_S_Strategic</fullName>
    <booleanFilter>((1 AND 2) or 3) and 4</booleanFilter>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.ACTIVE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CampaignPrimarySBU__c</columns>
    <columns>CampaignPrimaryCBTTier2__c</columns>
    <columns>CBT_Team__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CampaignPrimarySBU__c</field>
        <operation>equals</operation>
        <value>D&amp;S</value>
    </filters>
    <filters>
        <field>CAMPAIGN.NAME</field>
        <operation>startsWith</operation>
        <value>Review</value>
    </filters>
    <filters>
        <field>CAMPAIGN.CAMPAIGN_TYPE</field>
        <operation>equals</operation>
        <value>D&amp;S Strategic</value>
    </filters>
    <filters>
        <field>CAMPAIGN.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All D&amp;S Strategic</label>
</ListView>