src/objects/Campaign/listViews/All_Inactive_Campaigns.listView-meta.xml
<ListView>
    <fullName>All_Inactive_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CampaignPrimarySBU__c</columns>
    <columns>CAMPAIGN.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
    <columns>CAMPAIGN.TOT_OPPORTUNITIES</columns>
    <columns>CAMPAIGN.NUM_WON_OPPORTUNITIES</columns>
    <columns>CAMPAIGN.NUM_LEADS</columns>
    <columns>CAMPAIGN.NUM_CONVERTED_LEADS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.ACTIVE</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Inactive Campaigns</label>
    <language>en_US</language>
</ListView>