src/objects/Campaign/listViews/ATR_Airlines_Active_Campaigns.listView-meta.xml
<ListView>
    <fullName>ATR_Airlines_Active_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>CAMPAIGN.EXP_REVENUE</columns>
    <columns>CAMPAIGN.NUM_WON_OPPORTUNITIES</columns>
    <columns>AMOUNT_WON</columns>
    <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
    <columns>AMOUNT_ALL</columns>
    <columns>CAMPAIGN.NUM_CONVERTED_LEADS</columns>
    <columns>CAMPAIGN.NUM_LEADS</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CAMPAIGN.CREATED_DATE</columns>
    <columns>CAMPAIGN.ID</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CampaignPrimarySBU__c</field>
        <operation>equals</operation>
        <value>ATR</value>
    </filters>
    <filters>
        <field>CampaignPrimaryCBTTier2__c</field>
        <operation>equals</operation>
        <value>Airlines</value>
    </filters>
    <label>ATR Airlines Active Campaigns</label>
    <sharedTo>
        <group>ATRSalesLeadsReports187201</group>
        <group>ATR_Avionics_TSM_Group</group>
        <group>ATR_Contracts_Reports_Dashboards</group>
        <group>ATR_Global_Business_Group</group>
        <group>ATR_Global_FSE_Group</group>
        <group>ATRopportunityunrestrictedAccessGroup</group>
        <group>Library_Content_Admin</group>
        <group>NTT_Data</group>
        <group>NTT_Support</group>
    </sharedTo>
</ListView>