src/objects/Campaign/listViews/BGA_Campaigns.listView-meta.xml
<ListView>
    <fullName>BGA_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CampaignPrimarySBU__c</field>
        <operation>equals</operation>
        <value>BGA</value>
    </filters>
    <label>BGA Campaigns</label>
</ListView>