src/objects/Campaign/listViews/Campaign_Search.listView-meta.xml
<ListView>
    <fullName>Campaign_Search</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.NAME</field>
        <operation>equals</operation>
        <value>17.NokCorp.Partner.All.L.G.W.2882.PUtP</value>
    </filters>
    <label>Campaign Search</label>
</ListView>