src/objects/Campaign/listViews/CampaignBriefcaseView.listView-meta.xml
<ListView>
    <fullName>CampaignBriefcaseView</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Campaign_Title__c</columns>
    <columns>Campaign_Path__c</columns>
    <columns>Campaign_Briefcase__c</columns>
    <columns>Retention_Hold_Reason__c</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>RMU__c</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Campaign.ATR</value>
    </filters>
    <label>CampaignBriefcaseView_ATR</label>
    <language>en_US</language>
    <sharedTo>
        <group>All_Sales</group>
    </sharedTo>
</ListView>