src/objects/Campaign/listViews/Cybersecurity_AERO_apps.listView-meta.xml
<ListView>
    <fullName>Cybersecurity_AERO_apps</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>PARENT_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Cybersecurity as standalone product</label>
    <language>en_US</language>
</ListView>