src/objects/Campaign/listViews/Cybersecurity_Assurance_Center.listView-meta.xml
<ListView>
    <fullName>Cybersecurity_Assurance_Center</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <filterScope>Everything</filterScope>
    <label>Cybersecurity Assurance Center</label>
    <language>en_US</language>
</ListView>